# ascent

./: .git-blame-ignore-revs  .gitignore  BYODS.MD  CHANGELOG.MD  Cargo.toml  LICENSE  MACROS.MD  README.MD  _config.yml  index.md  rustfmt.toml
.github/workflows/: rust.yml
ascent/: Cargo.toml  README.MD  traits and types.txt
ascent/examples/: ascent_agg_clause.rs  ascent_disjunction_clause.rs  ascent_for_in_clause.rs  ascent_generic_program.rs  ascent_if_clause.rs  ascent_if_let_clause.rs  ascent_lattice.rs  ascent_let_clause.rs  ascent_macros_rule.rs  ascent_negation_clause.rs  ascent_source.rs  context_sensitive_flow_graph.rs  context_sensitive_flow_graph_with_records.rs  def_use_chains.rs  fibonacci.rs  fizz_buzz.rs  lists_using_recursive_enums.rs  sequences_using_recursive_records.rs  transitive_graph_closure.rs  var_points_to.rs
ascent/src/: aggregators.rs  c_lat_index.rs  c_rel_full_index.rs  c_rel_index.rs  c_rel_index_combined.rs  c_rel_index_read.rs  c_rel_no_index.rs  convert.rs  dict_merge.rs  experimental_dict.rs  experimental_index_shape.rs  experimental_multimap.rs  experimental_rel_full_index2.rs  experimental_rel_full_index3.rs  experimental_rel_full_index_bt.rs  experimental_rel_index2.rs  exps.rs  internal.rs  lib.rs  rel.rs  rel_index_boilerplate.rs  rel_index_read.rs  tests.rs  to_rel_index.rs  tuple_of_borrowed.rs  utils.rs
ascent_base/: Cargo.toml
ascent_base/src/: lattice.rs  lib.rs  util.rs
ascent_base/src/lattice/: bounded_set.rs  constant_propagation.rs  dual.rs  ord_lattice.rs  product.rs  set.rs  tuple.rs
ascent_macro/: Cargo.toml
ascent_macro/src/: ascent_codegen.rs  ascent_hir.rs  ascent_hir2.rs  ascent_mir.rs  ascent_syntax.rs  index_selection.rs  index_shape.rs  lib.rs  scratchpad.rs  scratchpad_template.rs  syn_utils.rs  test_errors.rs  tests.rs  utils.rs
ascent_macro_tests/: Cargo.toml
ascent_macro_tests/src/: lib.rs
ascent_macro_tests/tests/: macros.rs
ascent_macro_tests/tests/macros/fail/: incompatible_variable_type.err.txt  incompatible_variable_type.rs  invalid_rule_body_arity_too_few.err.txt  invalid_rule_body_arity_too_few.rs  invalid_rule_body_arity_too_many.err.txt  invalid_rule_body_arity_too_many.rs  invalid_rule_head_arity_too_few.err.txt  invalid_rule_head_arity_too_few.rs  invalid_rule_head_arity_too_many.err.txt  invalid_rule_head_arity_too_many.rs  missing_relation_keyword.err.txt  missing_relation_keyword.rs  non_existent_body_rule.err.txt  non_existent_body_rule.rs  non_existent_head_rule.err.txt  non_existent_head_rule.rs  non_existent_macro.err.txt  non_existent_macro.rs  unstratifiable_negation.err.txt  unstratifiable_negation.rs
ascent_macro_tests/tests/macros/pass/: agg_clause.out.rs  agg_clause.rs  disjunction_clause.out.rs  disjunction_clause.rs  empty_ascent.out.rs  empty_ascent.rs  empty_ascent_run.out.rs  empty_ascent_run.rs  fact.out.rs  fact.rs  (+20 more)
ascent_tests/: Cargo.toml
ascent_tests/benches/: benches.rs
ascent_tests/src/: agg_tests.rs  analysis_exp.rs  ascent_maybe_par.rs  example_tests.rs  exps.rs  include_source_tests.rs  lib.rs  macros_tests.rs  main.rs  se.rs  tests.rs  utils.rs
ascent_tests/tests/: macros.rs
ascent_tests/tests/macros/check/pass/: agg.out.rs  agg.rs  generator.out.rs  generator.rs  lambda_calc.out.rs  lambda_calc.rs  macro.out.rs  macro.rs  multiple_dynamic_clauses.out.rs  patterns.out.rs  patterns.rs  sp.out.rs  sp.rs  tc_parallel.out.rs  tc_parallel.rs  test2.out.rs  test2.rs  test3.out.rs  test3.rs
ascent_tests/tests/macros/check/pass/generic_tc/: parallel.out.rs  parallel.rs  serial.out.rs  serial.rs
ascent_tests/tests/macros/check/pass/lattices/: serial.out.rs  serial.rs
ascent_tests/tests/macros/check/pass/tc/: parallel.out.rs  parallel.rs  serial.out.rs  serial.rs
ascent_tests/tests/macros/run/pass/: macro0.out.rs  macro0.rs
ascent_tests/tests/macros/run_tests/pass/: tc_parallel.out.rs  tc_parallel.out.txt  tc_parallel.rs  tc_serial.out.rs  tc_serial.rs
benches/: benches.rs
byods/: README.md
byods/ascent-byods-rels/: Cargo.toml
byods/ascent-byods-rels/examples/: Cargo.toml  bench_trrel.rs  bench_trrel_uf.rs  blockchain.rs  tracking_alloc.rs
byods/ascent-byods-rels/examples/steensgaard/: main.rs
byods/ascent-byods-rels/examples/steensgaard/openjdk_javalang_steensgaard/: load.facts  store.facts
byods/ascent-byods-rels/src/: binary_rel.rs  ceqrel_ind.rs  eqrel.rs  eqrel_binary.rs  eqrel_ind.rs  eqrel_ternary.rs  fake_vec.rs  iterator_from_dyn.rs  lib.rs  rel_boilerplate.rs  test.rs  trrel.rs  trrel_binary.rs  trrel_binary_ind.rs  trrel_ternary_ind.rs  trrel_uf.rs  trrel_union_find.rs  trrel_union_find_binary_ind.rs  uf.rs  union_find.rs  utils.rs
byods/ascent-byods-rels/src/adaptor/: bin_rel.rs  bin_rel_plus_ternary_provider.rs  bin_rel_provider.rs  bin_rel_to_ternary.rs  mod.rs
byods/rels-ascent/: Cargo.toml
byods/rels-ascent/examples/steensgaard/: main.rs
byods/rels-ascent/examples/steensgaard/openjdk_javalang_steensgaard/: alloc.facts
byods/rels-ascent/src/: fake_vec.rs  iterator_from_dyn.rs  lib.rs  rel_boilerplate.rs  tracking_alloc.rs  trrel.rs  trrel_binary_ind.rs  trrel_ternary_ind.rs  trrel_uf.rs  trrel_union_find.rs  uf.rs
byods/rels-ascent/src/adaptor/: bin_rel.rs  bin_rel_plus_ternary_provider.rs  mod.rs
infer/: Cargo.toml
infer/src/: aggregators.rs  internal.rs  lib.rs
infer_base/: Cargo.toml
infer_base/src/: lattice.rs  lib.rs  util.rs
infer_base/src/lattice/: constant_propagation.rs  dual.rs  product.rs  set.rs  tuple.rs
infer_macro/: Cargo.toml
infer_macro/src/: infer_codegen.rs  infer_hir.rs  infer_mir.rs  infer_syntax.rs  lib.rs  scratchpad.rs  scratchpad_template.rs  test_errors.rs  tests.rs  utils.rs
infer_tests/: Cargo.toml
infer_tests/benches/: benches.rs
infer_tests/src/: agg_tests.rs  analysis_exp.rs  example_tests.rs  exps.rs  lattice_exps.rs  main.rs  se.rs  tests.rs  utils.rs
michael-ascent/: Cargo.toml
michael-ascent/src/: gpu.rs  gpu_v_cpu.rs  main.rs  tc.cu  tc.rs  tc_kernel.ptx
src/: main.rs  tests.rs
wasm-tests/: Cargo.toml  README.md
wasm-tests/tests/: web.rs
