[workspace]
members = ["ascent", "ascent_base", "ascent_macro", "byods/ascent-byods-rels"] 
exclude = ["ascent_tests", "wasm-tests"]
resolver = "2"

[workspace.package]
version = "0.6.0-alpha"

[workspace.dependencies]
ascent = { path = "./ascent", version = "0.6.0-alpha" }
ascent_macro = { path = "./ascent_macro", version = "0.6.0-alpha" }
ascent_base = { path = "./ascent_base", version = "0.6.0-alpha" }