[workspace]
members = ["byods/ascent-byods-rels", "ascent", "ascent_base", "ascent_macro"] 
exclude = ["ascent_tests", "wasm-tests"]
resolver = "2"

[workspace.package]
version = "0.6.0-alpha.1"

[workspace.dependencies]
ascent = { path = "./ascent", version = "0.6.0-alpha.1" }
ascent_macro = { path = "./ascent_macro", version = "0.6.0-alpha.1" }
ascent_base = { path = "./ascent_base", version = "0.6.0-alpha.1" }
