[package]
name = "ascent"
version = "0.5.0"
edition = "2021"
rust-version = "1.66" # the CI (../.github/workflows/rust.yml) toolchain version must match this
authors = ["Arash Sahebolamri"]
description = "Logic programming in Rust"
keywords = ["logic-programming", "program-analysis", "Datalog", "procedural-macro"]
categories = ["compilers"]
homepage = "https://s-arash.github.io/ascent/"
repository = "https://github.com/s-arash/ascent"
license = "MIT"
readme = "../README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ascent_macro = { version = "=0.5.0", path = "../ascent_macro" }
ascent_base = { version = "=0.5.0", path = "../ascent_base" }
rustc-hash = "1.1"
nohash-hasher = "0.2.0"
hashbrown = {version = "0.14", features = ["raw", "rayon"]}
instant = "0.1"
segvec = "0.1"
dashmap = { version = "5.5", features = ["rayon", "raw-api"] }
# TODO remove
# dashmap = { path = "../../repos/dashmap", features = ["rayon", "raw-api"] }

rayon = "1.5"
boxcar = "0.1.0"
sync-unsafe-cell = "0.1.0"

once_cell = "1.13.1"
paste = "1.0"

[dev_dependencies]

[features]
wasm-bindgen = ["instant/wasm-bindgen"]
