[package]
name = "ascent_base"
version = "0.2.1"
edition = "2021"
authors = ["Arash Sahebolamri"]
repository = "https://github.com/s-arash/ascent"
license = "MIT"
description = "support library for the ascent package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
