[package]
name = "ascent_macro"
version = "0.1.2"
edition = "2021"
authors = ["Arash Sahebolamri"]
repository = "https://github.com/s-arash/ascent"
license = "MIT"
description = "implementation of ascent macros"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features= ["derive", "full", "extra-traits"]} 
quote = "1.0"
ascent_base = {version = "0.1", path= "../ascent_base"}
proc-macro2 = "1.0"
itertools = "0.10"
petgraph = "0.6.0"
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"

[dev-dependencies]
ascent = {path = "../ascent"}
