[package]
name = "ascent_macro"
version.workspace = true
edition = "2021"
authors = ["Arash Sahebolamri"]
repository = "https://github.com/s-arash/ascent"
license = "MIT"
description = "implementation of ascent macros"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.109", features = ["derive", "full", "extra-traits", "visit-mut"] } 
quote = "1.0"
ascent_base = { workspace = true }
proc-macro2 = "1.0"
itertools = "0.12.0"
petgraph = "0.6.0"
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
duplicate = "0.4"

[dev-dependencies]
ascent = { path = "../ascent" }
rayon = "1.5"
crossbeam = "0.8"
