[package]
name = "ascent_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ascent = { path = "../ascent", default-features = false }
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.14"
quote = "1.0"
arrayvec = "0.7"
const-fnv1a-hash = "1.0.1"

[dev-dependencies]
rand = "0.9"

[[bench]]
name = "benches"
harness = false

[features]
par = ["ascent/par"]