[package]
name = "infer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

infer_macro = {path = "../infer_macro"}
infer_base = {path = "../infer_base"}
rustc-hash = "1.1"
nohash-hasher = "0.2.0"
mimalloc = { version = "0.1.24", default-features = false }