[package]
name = "infer_macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features= ["derive", "full", "extra-traits"]} 
quote = "1.0"
infer_base = {path= "../infer_base"}
proc-macro2 = "1.0"
itertools = "0.10"