[package]
name = "infer_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

stopwatch = "0.0.7"
infer = {path = "../infer"}
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.10"

[[bench]]
name = "benches"
harness = false