[package]
name = "infer_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

infer = {path = "../infer"}
stopwatch = "0.0.7"
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.10"
quote = "1.0"


[[bench]]
name = "benches"
harness = false