[package]
name = "wasm-tests"
version = "0.1.0"
authors = ["Arash Sahebolamri <arash.sahebolamri@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ascent = { path = "../ascent", features = ["wasm-bindgen"] }

# pinning to this version because higher versions don't work on rust 1.66
bumpalo = "=3.14"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
