[package]
name = "ascent-byods-rels"
version.workspace = true
edition = "2021"
authors = ["Arash Sahebolamri"]
description = "data structures for Ascent relations, made possible by Ascent's BYODS feature"
keywords = ["logic-programming", "program-analysis", "Datalog", "Ascent", "BYODS", "data-structure", "union-find"]
categories = ["data structures"]
homepage = "https://s-arash.github.io/ascent/"
repository = "https://github.com/s-arash/ascent"
license = "MIT"
readme = "../../README.MD"

[dev-dependencies]
proptest = "1"
rand = "0.8"
serde = "1.0.193"
csv = "1"
separator = "0.4.1"


[dependencies]
ascent = { workspace = true }
itertools = "0.12"
rustc-hash = "1.1"
derive_more = "0.99"
paste = "1.0"
hashbrown = { version = "0.14", features = ["raw", "rayon"] }

[features]
compact = []
