[package]
name = "ascent-byods-rels"
version.workspace = true
edition = "2021"
authors = ["Arash Sahebolamri"]
description = "data structures for Ascent relations, made possible by Ascent's BYODS feature"
keywords = ["Datalog", "Ascent", "BYODS", "data-structures", "union-find"]
categories = ["data-structures"]
homepage = "https://s-arash.github.io/ascent/"
repository = "https://github.com/s-arash/ascent"
license = "MIT"
readme = "../../README.MD"
autoexamples = false

[dependencies]
ascent = { workspace = true, default-features = false }
derive_more = "0.99.17"
itertools = "0.13"
rustc-hash = "2.0"
# syn is a dependency of derive_more 0.99, and the minimum version is buggy, so choosing a well-behaved
# version. Should be removed when derive_more switches to syn v2.0.
syn = "1.0.109" 
paste = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }

[dev-dependencies]
proptest = "1"
rand = "0.8"
serde = "1.0.193"
separator = "0.4.1"

[features]
default = ["par"]
compact = []
par = ["ascent/par", "hashbrown/rayon"]
